Fix Scrollbar Colour for News

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -5,6 +5,7 @@
 @use "sass:color";
 
 :root {
+  color-scheme: light;
   --global-bg-color: #fffefe; //#{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
@@ -86,6 +87,7 @@
 }
 
 html[data-theme="dark"] {
+  color-scheme: dark;
   --global-bg-color: #{$grey-color-dark};
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
